fix: (ErroBlock) image too large

--- a/src/components/error-block/error-block.less
+++ b/src/components/error-block/error-block.less
@@ -9,7 +9,6 @@
 
   &-image {
     height: var(--image-height);
-    padding-bottom: 20px;
 
     & img {
       height: 100%;
@@ -20,6 +19,7 @@
     font-size: 12px;
     color: #999;
     line-height: 1.4;
+    margin-top: 12px;
     &-title {
       font-size: 15px;
     }
@@ -29,7 +29,7 @@
   }
 
   &-content {
-    margin-top: 20px;
+    margin-top: 12px;
   }
 
   &-full-page {
@@ -38,6 +38,7 @@
       height: var(--image-height-full-page);
     }
     .@{class-prefix-error-block}-description {
+      margin-top: 20px;
       font-size: 13px;
       &-title {
         font-size: 20px;
